--- a/main.css
+++ b/main.css
@@ -60,11 +60,11 @@ header {
  h1  {
  font-family: 'Changa One', sans-serif;
  margin: 10px 0;
- font-size: 1.75em;
+ font-size: 5em;
  font-weight: normal;
  line-height: 0.5;
  text-align: center;
- color: 	#FF0000;
+ color: 	#32673f;
 
  }
 
